[package]
name = "sorew"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.17.0"
anyhow = "1.0.71"
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.17.0"
shuttle-serenity = "0.17.0"
shuttle-persist = "0.17.0"
tokio = "1.28.1"
tracing = "0.1.37"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.16"
html-escape = "0.2"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"