[package]
name = "sorew"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#shuttle-runtime = { git = "https://github.com/shuttle-hq/shuttle.git" }
#shuttle-secrets = { git = "https://github.com/shuttle-hq/shuttle.git" }
#shuttle-serenity = { git = "https://github.com/shuttle-hq/shuttle.git" }
#shuttle-persist = { git = "https://github.com/shuttle-hq/shuttle.git" }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
scraper = "0.16"
html-escape = "0.2"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
log = "0.4"
simple_logger = "4"
envconfig = "0.10"